adjusted w3-include.html to navigation.html

--- a/compiling.html
+++ b/compiling.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body onload="myW3IncludeHTMLIndex();">
-		<div w3-include-html="index.html"></div>
+		<div w3-include-html="navigationbar.html"></div>
 		
 		<div id="content">
 			<h2>Compiling of Android/Java vs. C</h2>
