--- a/whyCWithAndroid.html
+++ b/whyCWithAndroid.html
@@ -5,7 +5,7 @@
 	</head>
 	
 	<body onload="myW3IncludeHTMLIndex();">
-		<div w3-include-html="index.html"></div>
+		<div w3-include-html="navigationbar.html"></div>
 		
 		<div id="content">
 			<h2>Why using C with Android?</h2>
