and finally changed index ref in nav bar

--- a/navigationbar.html
+++ b/navigationbar.html
@@ -10,7 +10,7 @@
 		<h1 class="header">Metos3d on mobile devices</h1>
 		
 		<ul id="index" class="ulIndex">
-		    <li class="liIndex"><a href="about.html">About</a></li>
+		    <li class="liIndex"><a href="index.html">About</a></li>
 		    <li class="liIndex"><a href="overview.html">Overview</a></li>
 		    <li class="liIndex"><a href="whyCWithAndroid.html">Why using C with Android?</a></li>
 		    <li class="liIndex"><a href="compiling.html">Compiling of Android/Java vs. C</a></li>
