added ToDo in overview and continued compiling article

--- a/compiling.html
+++ b/compiling.html
@@ -17,7 +17,7 @@
 			Java source code is compiled into Bytecode. The Bytecode gets executed by a Java Virtual Machine (JVM), which is a Runtime Interpreter.
 			A JVM is build upon an imaginary processor, which communicates and translates between the Bytecode, the operation system (os) and it's hardware,
 			on which it should run.
-			<p><img src="pictures/compiling/compilation.png" alt="Java compilation"></p>
+			<p><img src="pictures/compiling/java_compilation.png" alt="Java compilation"></p>
 			This has the advantage, that the compilation process of source code is independent of the underlying os and hardware.
 			But it is slower than running machine code directly, because the work of the hardware (e.g. to decode and execute instructions)
 			has to be repeated in the JVM.
@@ -42,7 +42,7 @@
 			<ul>
 				<li><i>assemble</i>: Builds project output</li>
 				<li><i>check</i>: Runs all kind of tests</li>
-				<li><i>run</i>: Runs assemble and check</li>
+				<li><i>run</i>: Runs <i>assemble</i> and <i>check</i></li>
 				<li><i>clean</i>: Cleans</li>
 			</ul>
 			<p>For running correctly the build system assumes sensible defaults for the project structure and other build options, which can be customized.
@@ -51,7 +51,19 @@
 			
 			
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ -->			
-			<h4>C<span id="C" class="anchor"/></h4>
+			<h4>C<a href="http://althing.cs.dartmouth.edu/local/www.acm.uiuc.edu/sigmil/RevEng/ch02.html" class="footnote"><sup>3</sup></a><span id="C" class="anchor"/></h4>
+			<table>
+				<tr>
+					<td>test
+					    testtesttesttesttest testtesttesttesttest testtesttesttesttest testtesttesttesttest testtesttesttesttest testtesttesttesttest testtesttesttesttest
+					</td>
+					<td><img src="pictures/compiling/C_compilation.png" alt="C compilation"/></td>
+				</tr>
+			</table>
+			
+			<!-- ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ -->			
+			<h3>Conclusion<span id="Conclusion" class="anchor"/></h3>
+			
 		</div>
 	</body>
 </html>
