--- a/navigationbar.html
+++ b/navigationbar.html
@@ -14,6 +14,7 @@
 		    <li class="liIndex"><a href="overview.html">Overview</a></li>
 		    <li class="liIndex"><a href="whyCWithAndroid.html">Why using C with Android?</a></li>
 		    <li class="liIndex"><a href="compiling.html">Compiling of Android/Java vs. C</a></li>
+		    <li class="liIndex"><a href="makeBuild.html">Make Build</a></li>
 		    <li class="liIndex"><a href="contact.html">Contact</a></li>
 		</ul>  
 		
