wrote Make Build

--- a/compiling.html
+++ b/compiling.html
@@ -54,7 +54,7 @@
 			<h4>C<a href="http://althing.cs.dartmouth.edu/local/www.acm.uiuc.edu/sigmil/RevEng/ch02.html" class="footnote"><sup>3</sup></a><span id="C" class="anchor"/></h4>
 			<table>
 				<tr>
-					<td valign="top"><b>C does not have the concept of a virtual machine.</b> First a preprocessor runs over the source code. It is basically a substitution engine,
+					<td><b>C does not have the concept of a virtual machine.</b> First a preprocessor runs over the source code. It is basically a substitution engine,
 						which copies include-directives and replaces macros in the source code. Second the source code is parsed and translated into Assembler.
 						<b>This step is platform-dependent</b>, because Assembler code is different for different platforms. Third the Assembler code is translated into machine code.
 						Finally a linker puts everything together to one program. There are three different types of linker.
