--- a/navigationbar.html
+++ b/navigationbar.html
@@ -15,6 +15,7 @@
 		    <li class="liIndex"><a href="whyCWithAndroid.html">Why using C with Android?</a></li>
 		    <li class="liIndex"><a href="compiling.html">Compiling of Android/Java vs. C</a></li>
 		    <li class="liIndex"><a href="makeBuild.html">Make Build</a></li>
+		    <li class="liIndex"><a href="AndroidNDK.html">Android NDK</a></li>
 		    <li class="liIndex"><a href="contact.html">Contact</a></li>
 		</ul>  
 		
