--- a/DiveIntoAndroidNDK.html
+++ b/DiveIntoAndroidNDK.html
@@ -8,7 +8,21 @@
 		<div w3-include-html="navigationbar.html"></div>
 		
 		<div id="content">
-
+			<h2>Dive into Android NDK</h2>
+			After we have realized that compilation of <i>C</i> and <i>Java</i> is done in complete different worlds,
+			we want to dive smoothly into the <a href="https://developer.android.com/ndk/guides/index.html">Android NDK</a> (native developer kit),
+			which combines these two worlds within an Android application. First we are going to take a glance at the Java Native Interface (JNI), 
+			which lets us call <i>C-functions</i> within Java. Second the NDK basics will be explained. After that I tried to dive in with a little example-project in Android Studio
+			- and crashed really frustrating. Finally I tried the same with Eclipse and become happy again :)
+			
+			<h4>Java Native Interface (JNI)</h4>
+			
+			<h4>NDK basics</h4>
+			
+			<h4>Crash into NDK with Android Studio</h4>
+			
+			<h4>Dive into NDK with Eclipse</h4>
+			
 		</div>
 	</body>
 </html>
